cleaning up syntax, pass in additional optionEnabledPath and z-index fix

--- a/addon/tailwind/components/bourbon-search-select-field.css
+++ b/addon/tailwind/components/bourbon-search-select-field.css
@@ -1,3 +1,7 @@
+.bourbon-search-select-field {
+  z-index: 1;
+}
+
 .bourbon-search-select-field__input-container {
   position: relative;
   z-index: 1;
